bye flicktys(?) font family thing, bye!

--- a/src/index.html
+++ b/src/index.html
@@ -85,8 +85,9 @@
   
   <div class="gallery-cell">
     <div class="carrouseltext">
-      <p>hello world1</p>
-      <p>hello world2</p>
+      <p class="font-semibold">Lepasepiku päev/</p>
+      <p>ekskursioon ja ujumine</p>
+      <p>10.06</p>
     </div>
   
     <div class="carrouselimg">
@@ -113,9 +114,7 @@
   <div class="gallery-cell">
   </div>
 
-  <div class="gallery-cell">
-  </div>
-
+ 
 </div>
 
   
