too lcoked in to stop now. Margin time!

--- a/src/index.html
+++ b/src/index.html
@@ -85,9 +85,9 @@
   
   <div class="gallery-cell">
     <div class="carrouseltext">
-      <h2 class="font-semibold">Lepasepiku päev</h2>
+      <h2 class="font-semibold">Lepasepiku päev/</h2>
       <h2>ekskursioon ja ujumine</h2>
-      <h2>10.06</h2>
+      <h2 class="date">10.06</h2>
     </div>
   
     <div class="carrouselimg">
