grilled cheese would go so hard rn

--- a/src/index.html
+++ b/src/index.html
@@ -80,45 +80,45 @@
       <h1>Sündmused</h1>
     </div>
   
-<div class="gallery js-flickity"
-  data-flickity-options='{ "wrapAround": true }'>
+    <div class="gallery js-flickity" data-flickity-options='{ "wrapAround": true }'>
   
-  <div class="gallery-cell">
-    <div class="carrouseltext">
-      <h2 class="font-semibold">Lepasepiku päev/</h2>
-      <h2>ekskursioon ja ujumine</h2>
-      <h2 class="date">10.06</h2>
-    </div>
+      <div class="gallery-cell">
+        <div class="carrouseltext">
+          <h2 class="font-semibold">Lepasepiku päev/</h2>
+          <h2>ekskursioon ja ujumine</h2>
+          <h2 class="date">10.06</h2>
+        </div>
   
-    <div class="carrouselimg">
-      <img src="assets/lepasepikupäev.svg" alt="SVG Image">
-    </div>
-    <div class="cellpara">
-      <p>Tutvumine tuuliku ajaloo ja taastamist. Seejärel saab end kosutada Viljandi järve ääres ujumisega. Päeva lõpetab
-        mõnus kama tegemise töötuba, kus igaüks saab oma käega traditsioonilist eestimaist jooki valmistada ja maitsta!
-      </p>
-      <button
-        class="bg-warning text-white px-6 py-3 rounded-[20px]  items-center font-semibold text-lg shadow-lg shadow-warning/15">
-        Saada
-      </button>
-
-    </div>
-  </div>
-
-  <div class="gallery-cell">
-  </div>
-
-  <div class="gallery-cell">
-  </div>
-
-  <div class="gallery-cell">
-  </div>
-
- 
-</div>
-
+        <div class="carrouselimg">
+          <img src="assets/lepasepikupäev.svg" alt="SVG Image">
+        </div>
+        <div class="cellpara">
+          <p>Tutvumine tuuliku ajaloo ja taastamist. Seejärel saab end kosutada Viljandi järve ääres ujumisega. Päeva
+            lõpetab
+            mõnus kama tegemise töötuba, kus igaüks saab oma käega traditsioonilist eestimaist jooki valmistada ja
+            maitsta!
+          </p>
+          <button
+            class="bg-warning text-white px-6 py-3 rounded-[20px]  items-center font-semibold text-lg shadow-lg shadow-warning/15">
+            Saada
+          </button>
   
+        </div>
+      </div>
+  
+      <div class="gallery-cell">
+      </div>
+  
+      <div class="gallery-cell">
+      </div>
+  
+      <div class="gallery-cell">
+      </div>
+  
+  
+    </div>
   </div>
+
   <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
   </body>
   </html>
