ah, its...beautiful

--- a/src/index.html
+++ b/src/index.html
@@ -100,23 +100,82 @@
           </p>
           <button
             class="bg-warning text-white px-6 py-3 rounded-[20px]  items-center font-semibold text-lg shadow-lg shadow-warning/15">
-            Saada
+           Loen rohkem
           </button>
   
         </div>
       </div>
+  <div class="gallery-cell">
+    <div class="carrouseltext">
+      <h2 class="font-semibold">Leiva päev/</h2>
+      <h2>töötoad ja laat</h2>
+      <h2 class="date">07.09</h2>
+    </div>
   
-      <div class="gallery-cell">
-      </div>
-  
-      <div class="gallery-cell">
-      </div>
-  
-      <div class="gallery-cell">
-      </div>
-  
+    <div class="carrouselimg">
+      <img src="assets/Leivapäev.svg" alt="SVG Image">
+    </div>
+    <div class="cellpara">
+      <p>Leiva päev toob kokku käsitöö, maitseelamused ja kogukonnatunde. Osale leivateo töötoas, uudista kohalikke
+        meeneid ja hõrgutisi laadal ning naudi elavat muusikat. Ideaalne päev, et tunda end osana elavast traditsioonist.
+      </p>
+      <button
+        class="bg-warning text-white px-6 py-3 rounded-[20px]  items-center font-semibold text-lg shadow-lg shadow-warning/15">
+        Loen rohkem
+      </button>
   
     </div>
+  </div>
+  
+  <div class="gallery-cell">
+    <div class="carrouseltext">
+      <h2 class="font-semibold">Pagari õnnepäev/</h2>
+      <h2>ekskursioon ja ujumine</h2>
+      <h2 class="date">10.06</h2>
+    </div>
+  
+    <div class="carrouselimg">
+      <img src="assets/Pagariõnnepäev.svg" alt="SVG Image">
+    </div>
+    <div class="cellpara">
+      <p>Tutvumine tuuliku ajaloo ja taastamist. Seejärel saab end kosutada Viljandi järve ääres ujumisega. Päeva
+        lõpetab
+        mõnus kama tegemise töötuba, kus igaüks saab oma käega traditsioonilist eestimaist jooki valmistada ja
+        maitsta!
+      </p>
+      <button
+        class="bg-warning text-white px-6 py-3 rounded-[20px]  items-center font-semibold text-lg shadow-lg shadow-warning/15">
+        Loen rohkem
+      </button>
+  
+    </div>
+  </div>
+  
+  <div class="gallery-cell">
+    <div class="carrouseltext">
+      <h2 class="font-semibold">Meow/</h2>
+      <h2>ekskursioon ja vaiba töötuba</h2>
+      <h2 class="date">27.06</h2>
+    </div>
+  
+    <div class="carrouselimg">
+      <img src="assets/Vaibad.svg" alt="SVG Image">
+    </div>
+    <div class="cellpara">
+      <p>Tutvumine tuuliku ajaloo ja taastamist. Seejärel saab end kosutada Viljandi järve ääres ujumisega. Päeva
+        lõpetab
+        mõnus kama tegemise töötuba, kus igaüks saab oma käega traditsioonilist eestimaist jooki valmistada ja
+        maitsta!
+      </p>
+      <button
+        class="bg-warning text-white px-6 py-3 rounded-[20px]  items-center font-semibold text-lg shadow-lg shadow-warning/15">
+        Loen rohkem
+      </button>
+  
+    </div>
+  </div>
+  
+  </div>
   </div>
 
   <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
