--- a/src/index.html
+++ b/src/index.html
@@ -171,12 +171,40 @@
         class="bg-warning text-white px-6 py-3 rounded-[20px]  items-center font-semibold text-lg shadow-lg shadow-warning/15">
         Loen rohkem
       </button>
-  
     </div>
   </div>
-  
   </div>
   </div>
+
+<div class="team">
+  <div class="teamheading">
+    <h1>Meie toimekas meeskond</h1>
+  </div>
+  <div class="teamcontent">
+    <div>
+      <img src="assets/Toomas.svg" alt="">
+      <h2>Toomas Tamm</h2>
+      <p>Tuuliku peremees, kirglik ajaloohuviline. Avatud meelega seikleja.</p>
+    </div>
+
+     <div>
+      <img src="assets/Elviire.svg" alt="">
+      <h2>Elviire Sibula</h2>
+      <p>Käsitöömeister, rahvuslike traditsioonide elushoidja.</p>
+    </div>
+
+      <div>
+      <img src="assets/Minnie.svg" alt="">
+      <h2>Minnie</h2>
+      <p>Mõldri parem käsi. Hiirte hirm.</p>
+    </div>
+
+
+
+  </div>
+</div>
+
+
 
   <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
   </body>
