--- a/src/index.html
+++ b/src/index.html
@@ -198,8 +198,37 @@
       <h2>Minnie</h2>
       <p>Mõldri parem käsi. Hiirte hirm.</p>
     </div>
+  </div>
+</div>
 
 
+
+
+ <div class="meenedtitle">
+    <div class="title">
+      <h1>Populaarsed tooted</h1>
+    </div>
+  
+
+<div class="meened-gallery js-flickity" data-flickity-options='{ "wrapAround": true }'>
+  <div class="meened">
+
+    <div class="meened-cell">
+      <div class="meenedimg">
+        <img src="assets/Magnet.svg" alt="SVG Image">
+      </div>
+
+      <div class="meenedpara">
+        <h2>Kadakast külmkapimagnet</h2>
+        <h3>3€</h3>
+        <button
+          class="bg-warning text-white px-6 py-3 rounded-[20px] items-center font-semibold text-lg shadow-lg shadow-warning/15">
+          Vaatan toodet
+        </button>
+      </div>
+    </div>
+
+   
 
   </div>
 </div>
