--- a/src/index.html
+++ b/src/index.html
@@ -204,36 +204,30 @@
 
 
 
- <div class="meenedtitle">
-    <div class="title">
-      <h1>Populaarsed tooted</h1>
-    </div>
-  
+<div class="meenedtitle">
+  <div class="title">
+    <h1>Populaarsed tooted</h1>
+  </div>
 
-<div class="meened-gallery js-flickity" data-flickity-options='{ "wrapAround": true }'>
-  <div class="meened">
-
+  <div class="meened-gallery js-flickity" data-flickity-options='{ "wrapAround": true }'>
+    
     <div class="meened-cell">
       <div class="meenedimg">
-        <img src="assets/Magnet.svg" alt="SVG Image">
+        <img src="assets/Magnet.svg" alt="Kadakast külmkapimagnet">
       </div>
 
       <div class="meenedpara">
         <h2>Kadakast külmkapimagnet</h2>
-        <h3>3€</h3>
-        <button
-          class="bg-warning text-white px-6 py-3 rounded-[20px] items-center font-semibold text-lg shadow-lg shadow-warning/15">
+        <h1>3€</h1>
+        <button class="bg-warning text-white px-6 py-3 rounded-[20px] font-semibold text-lg shadow-lg shadow-warning/15">
           Vaatan toodet
         </button>
       </div>
     </div>
 
-   
-    A
 
   </div>
 </div>
-
 
 
   <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
