carrousel nr 2 done!! wooo

--- a/src/index.html
+++ b/src/index.html
@@ -226,6 +226,47 @@
     </div>
 
 
+       <div class="meened-cell">
+      <div class="meenedimg">
+        <img src="assets/keychain.svg" alt="Kadakast külmkapimagnet">
+      </div>
+
+      <div class="meenedpara">
+        <h2>Võtmehoidja</h2>
+        <h1>3€</h1>
+        <button class="bg-warning text-white px-6 py-3 rounded-[20px] font-semibold text-lg shadow-lg shadow-warning/15">
+          Vaatan toodet
+        </button>
+      </div>
+    </div>
+
+    <div class="meened-cell">
+      <div class="meenedimg">
+        <img src="assets/Kama.svg" alt="Kadakast külmkapimagnet">
+      </div>
+
+      <div class="meenedpara">
+        <h2>Kama 400g</h2>
+        <h1>2.80€</h1>
+        <button class="bg-warning text-white px-6 py-3 rounded-[20px] font-semibold text-lg shadow-lg shadow-warning/15">
+          Vaatan toodet
+        </button>
+      </div>
+    </div>
+
+    <div class="meened-cell">
+      <div class="meenedimg">
+        <img src="assets/Nisujahu.svg" alt="Kadakast külmkapimagnet">
+      </div>
+
+      <div class="meenedpara">
+        <h2>Nisujahu 400g</h2>
+        <h1>2.80€</h1>
+        <button class="bg-warning text-white px-6 py-3 rounded-[20px] font-semibold text-lg shadow-lg shadow-warning/15">
+          Vaatan toodet
+        </button>
+      </div>
+    </div>
   </div>
 </div>
 
