added history section

--- a/src/index.html
+++ b/src/index.html
@@ -271,6 +271,37 @@
 </div>
 
 
+<div class="history">
+  <h1>Ajalugu</h1>
+  
+  <div class="historycontent">
+    <div class="historybox1">
+      <div>
+        <h2>1798</h2>
+        <p>Esimesed viited Suislepa tuuleveskile pärinevad aastast 1798.  Aja jooksul on
+see üle elanud torme ja seisakuid, kuid jäänud siiski kohaliku identiteedi sümboliks.</p>
+      </div>
+
+      <div>
+        <h2>2004</h2>
+        <p>Vald müüs lagunenud veski oksjonil. Toomas Tamm ema ostis selle ootamatult ära, andes nii alguse taastamisplaanidele. See oli veski uue elu alguspunkt.</p>
+      </div>
+
+      <div>
+        <h2>2018</h2>
+        <p>Avati veski pidulikult taas. Aastatepikkuse töö ja ligikaudu 300 000 eurose investeeringu tulemusel sai hoonest kogukonnakeskus, kus tegutsevad kohvik, muuseum ja peoruumi.</p>
+      </div>
+    </div>
+
+    <div class="historybox2">
+      <img src="assets/History.svg" alt="">
+    </div>
+  </div>
+</div>
+
+
+
+
   <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
   </body>
   </html>
