--- a/src/activities.html
+++ b/src/activities.html
@@ -49,7 +49,7 @@
             </li>
             <li>
               <a href="/src/activities.html"
-                class="block py-2 px-3 text-gray-400 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:hover:text-black md:p-0 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Sündmused</a>
+                class="block py-2 px-3 text-gray-950 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:hover:text-black md:p-0 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Sündmused</a>
             </li>
             <li>
               <a href="/src/donate.html"
@@ -62,5 +62,88 @@
   </div>
 
 
-   </body>
+
+
+<div class="activities">
+  <div class="activities-filter">
+    <h2>Sorteeri:</h2>
+    <h2 class="font-semibold">Populaarne</h2>
+    <img src="assets/ArrowDown.svg" alt="">
+    <img src="assets/Filter.svg" alt="">
+  </div>
+
+  <div class="activities-content">
+
+    <div>
+      <div class="actdatentitle">
+        <div class="title-group">
+          <h2 class="font-semibold">Lepasepikupäev/</h2>
+          <h2>ekskursioon ja ujumine</h2>
+        </div>
+        <h2 class="date">10.06</h2>
+      </div>
+
+      <img src="assets/Lepasepikupäev.svg" alt="">
+      <p>Tutvumine tuuliku ajaloo ja taastamist. Seejärel saab end kosutada Viljandi järve ääres ujumisega. Päeva lõpetab mõnus kama tegemise töötuba, kus igaüks saab oma käega traditsioonilist eestimaist jooki valmistada ja maitsta!</p>
+      <button class="bg-warning text-white px-6 py-3 rounded-[20px] font-semibold text-lg shadow-lg shadow-warning/15">
+        Vaata tegevust
+      </button>
+    </div>
+
+        <div>
+      <div class="actdatentitle">
+        <div class="title-group">
+          <h2 class="font-semibold">Lepasepikupäev/</h2>
+          <h2>ekskursioon ja ujumine</h2>
+        </div>
+        <h2 class="date">10.06</h2>
+      </div>
+
+      <img src="assets/Lepasepikupäev.svg" alt="">
+      <p>Tutvumine tuuliku ajaloo ja taastamist. Seejärel saab end kosutada Viljandi järve ääres ujumisega. Päeva lõpetab mõnus kama tegemise töötuba, kus igaüks saab oma käega traditsioonilist eestimaist jooki valmistada ja maitsta!</p>
+      <button class="bg-warning text-white px-6 py-3 rounded-[20px] font-semibold text-lg shadow-lg shadow-warning/15">
+        Vaata tegevust
+      </button>
+    </div>
+
+        <div>
+      <div class="actdatentitle">
+        <div class="title-group">
+          <h2 class="font-semibold">Lepasepikupäev/</h2>
+          <h2>ekskursioon ja ujumine</h2>
+        </div>
+        <h2 class="date">10.06</h2>
+      </div>
+
+      <img src="assets/Lepasepikupäev.svg" alt="">
+      <p>Tutvumine tuuliku ajaloo ja taastamist. Seejärel saab end kosutada Viljandi järve ääres ujumisega. Päeva lõpetab mõnus kama tegemise töötuba, kus igaüks saab oma käega traditsioonilist eestimaist jooki valmistada ja maitsta!</p>
+      <button class="bg-warning text-white px-6 py-3 rounded-[20px] font-semibold text-lg shadow-lg shadow-warning/15">
+        Vaata tegevust
+      </button>
+    </div>
+
+        <div>
+      <div class="actdatentitle">
+        <div class="title-group">
+          <h2 class="font-semibold">Lepasepikupäev/</h2>
+          <h2>ekskursioon ja ujumine</h2>
+        </div>
+        <h2 class="date">10.06</h2>
+      </div>
+
+      <img src="assets/Lepasepikupäev.svg" alt="">
+      <p>Tutvumine tuuliku ajaloo ja taastamist. Seejärel saab end kosutada Viljandi järve ääres ujumisega. Päeva lõpetab mõnus kama tegemise töötuba, kus igaüks saab oma käega traditsioonilist eestimaist jooki valmistada ja maitsta!</p>
+      <button class="bg-warning text-white px-6 py-3 rounded-[20px] font-semibold text-lg shadow-lg shadow-warning/15">
+        Vaata tegevust
+      </button>
+    </div>
+
+  </div>
+</div>
+
+
+
+
+
+  </body>
   </html>
