footermargins, copy pasted it on every html

--- a/src/contact.html
+++ b/src/contact.html
@@ -125,5 +125,40 @@
     </div>
   </div>
 
+<div class="footer">
+
+  <div class="footerbox1">
+    <img src="assets/LogoWhite.svg" alt="">
+  </div>
+
+  <div class="footerbox2">
+    <div class="fnavbar">
+      <a href="shop.html" class="font-semibold">Pood</a>
+      <a href="donate.html" class="font-semibold">Toeta</a>
+      <a href="activities.html" class="font-semibold">Sündmused</a>
+      <a href="contact.html" class="font-semibold">Kontakt</a>
+    </div>
+    <div class="fsocials">
+      <img src="assets/FacebookWhite.svg" alt="">
+      <img src="assets/InstagrammWhite.svg" alt="">
+    </div>
+    <div class="copyright">
+      <p>© 2025 Suislepa Tuulik | Eesti käsitöö ja kultuuripärand</p>
+    </div>
+  </div>
+
+  <div class="footerbox3">
+    <div class="flocation">
+      <p>Veski tänav 11, Suislepa, 69703 Viljandi maakond</p>
+    </div>
+    <div class="fnumber">
+      <p>+372 5556 5556</p>
+    </div>
+  </div>
+
+</div>
+
+
+
   </body>
   </html>
