whyisthefirstcarrouselbroken ule<hfu<pesgsg

--- a/src/activities.html
+++ b/src/activities.html
@@ -93,13 +93,13 @@
         <div>
       <div class="actdatentitle">
         <div class="title-group">
-          <h2 class="font-semibold">Lepasepikupäev/</h2>
-          <h2>ekskursioon ja ujumine</h2>
+          <h2 class="font-semibold">Leiva päev/</h2>
+          <h2>töötoad ja laat</h2>
         </div>
         <h2 class="date">10.06</h2>
       </div>
 
-      <img src="assets/Lepasepikupäev.svg" alt="">
+      <img src="assets/Leivapäev.svg" alt="">
       <p>Tutvumine tuuliku ajaloo ja taastamist. Seejärel saab end kosutada Viljandi järve ääres ujumisega. Päeva lõpetab mõnus kama tegemise töötuba, kus igaüks saab oma käega traditsioonilist eestimaist jooki valmistada ja maitsta!</p>
       <button class="bg-warning text-white px-6 py-3 rounded-[20px] font-semibold text-lg shadow-lg shadow-warning/15">
         Vaata tegevust
