--- a/src/donate.html
+++ b/src/donate.html
@@ -70,7 +70,7 @@
       </p>
       <p class="tp2">Sinu annetus aitab hoida seda väärtuslikku paika elavana ning toetab meie kultuuri- ja haridusüritusi. Toetades meie tegevust toetad kogukonna elu!</p>
 
-      <h2>Aannetamise võimalused</h2>
+      <h2>Annetamise võimalused</h2>
       <p class="ülekanne">Pangaülekanne</p>
       <p>Saaja: Suislepa Tuuleveski MTÜ</p>
       <p>Arveldusarve: EE00 0000 0000 0000 0000</p>
